# kv260-vitis-flow

./: .gitignore  README.md  cnn_model.py  fmnist_quantize_pt1.py  fmnist_quantize_pt2.py  fmnist_train.py  meta.json
cpp/: CMakeLists.txt  main.cc  md5sum.txt
docker/: Dockerfile.kria
